[package]
name = "macro-test"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "name_of expression for Rust"
repository = "https://github.com/oovm/size_of"
documentation = "https://docs.rs/name_of"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies.name_of]
version = "*"
path = "../name_of"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
