[package]
name = "name_of"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "name_of expression for Rust"
repository = "https://github.com/oovm/size_of"
documentation = "https://docs.rs/name_of"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.15", features = ["full"] }
quote = "1.0.27"
proc-macro2 = "1.0.56"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
